--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,16 +3,19 @@ name: Build and Push Docker Image
 on:
   push:
     branches: [ "main" ]
-  workflow_dispatch: # Allows manual trigger
+  pull_request:
+    branches: [ main ]
 
 env:
-  REGISTRY: ghcr.io
-  # Uses the repository name as the image name (e.g., ghcr.io/username/repo-name)
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ghcr.io/${{ github.repository }}
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
+    environment:
+      name: production
+
     permissions:
       contents: read
       packages: write # Required to push to GHCR
