--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,52 +1,71 @@
-name: Build and Push Docker Image
+name: CI/CD Pipeline
 
+# Trigger the workflow on every to main branch
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
-
 env:
   IMAGE_NAME: ghcr.io/${{ github.repository }}
-
 jobs:
   build-and-push:
+    # Run the job on a fresh Ubuntu server provided by GitHub
     runs-on: ubuntu-latest
 
     environment:
       name: production
 
+    # Grant permissions for the job to write to the GitHub Container Registry
     permissions:
       contents: read
-      packages: write # Required to push to GHCR
+      packages: write
 
     steps:
+      # ----- CI PHASE -----
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
-      - name: Log in to the Container registry
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: stable
+
+      - name: Download Go Modules
+        run: go mod download
+
+      - name: Vendor dependencies
+        run: go mod vendor
+
+      - name: Run Go Tests
+        run: go test ./...
+
+      - name: Run Go Lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.6.0
+
+      # ----- BUILD & PUSH -----
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=latest
-            type=sha,format=long
+          password: ${{ secrets.TOKEN_GITHUB }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            ${{ env.IMAGE_NAME }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Deploy to Server
         uses: appleboy/ssh-action@v1
