--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,14 +65,16 @@ jobs:
       - name: Deploy to Server
         uses: appleboy/ssh-action@v1
         with:
-          timeout: 1000s
           host: ${{ secrets.SERVER_HOST }}     # e.g., '123.45.67.89'
           username: ${{ secrets.SERVER_USER }} # e.g., 'ubuntu'
           key: ${{ secrets.SSH_PRIVATE_KEY }} # Your server's private SSH key
+          timeout: 120s
+          command_timeout: 20m
           script: |
             set -e # Stop script immediately on error
 
             # 1. Setup Directory
+            echo "STEP 1"
             if [ ! -d "repoflow-backend/.git" ]; then
               echo "Repository not found or not a git repo — cloning fresh copy..."
               sudo rm -rf repoflow-backend
@@ -81,9 +83,13 @@ jobs:
               # If private, use a token (ensure TOKEN_GITHUB is set as secret)
               # git clone https://$GITHUB_ACTOR:$TOKEN_GITHUB@github.com/regysaputra/repoflow-backend.git
             fi
+            echo "STEP 2"
             cd repoflow-backend
+            echo "STEP 3"
             git fetch origin main
+            echo "STEP 4"
             git reset --hard origin/main
+            echo "STEP 5"
 
             # 2. Setup Environment Variables
             echo "Creating .env file..."
@@ -93,15 +99,16 @@ jobs:
             R2_SECRET_KEY=${{ secrets.R2_SECRET_KEY }}
             R2_BUCKET=${{ secrets.R2_BUCKET }}
             EOF
-
+            echo "STEP 6"
             # 4. Pull Latest Images
             echo ${{ secrets.TOKEN_GITHUB }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            echo "STEP 7"
             docker compose pull app
-
+            echo "STEP 8"
             # 6. Restart Services
             echo "🚀 Restarting services..."
             docker compose down --remove-orphans
-
+            echo "STEP 9"
             # Start App
             docker compose up -d app
 
